// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tid.sql > line 9 1`] = `
[
  "SELECT '(4294967296,1)'::tid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "(4294967296,1)",
                          },
                        },
                      },
                      "location": 23,
                      "typeName": {
                        "location": 25,
                        "names": [
                          {
                            "String": {
                              "sval": "tid",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 10 1`] = `
[
  "  -- error

-- Also try it with non-error-throwing API
SELECT pg_input_is_valid('(0)', 'tid')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 62,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 80,
                            "sval": {
                              "sval": "(0)",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 87,
                            "sval": {
                              "sval": "tid",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 62,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 24 1`] = `
[
  "INSERT INTO tid_tab VALUES (1), (2)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tid_tab",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 28,
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 33,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 32 1`] = `
[
  "CREATE MATERIALIZED VIEW tid_matview AS SELECT a FROM tid_tab",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 25,
                "relname": "tid_matview",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_MATVIEW",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 54,
                      "relname": "tid_tab",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 47,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 47,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 36 1`] = `
[
  " -- ok
DROP MATERIALIZED VIEW tid_matview",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_matview",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_MATVIEW",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 41 1`] = `
[
  "CREATE SEQUENCE tid_seq",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSeqStmt": {
            "sequence": {
              "inh": true,
              "location": 16,
              "relname": "tid_seq",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 42 1`] = `
[
  " -- ok
DROP SEQUENCE tid_seq",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_seq",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_SEQUENCE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 46 1`] = `
[
  "CREATE INDEX tid_ind ON tid_tab(a)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "tid_ind",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "a",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 24,
              "relname": "tid_tab",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 47 1`] = `
[
  " -- fails
DROP INDEX tid_ind",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_ind",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_INDEX",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 51 1`] = `
[
  "CREATE TABLE tid_part (a int) PARTITION BY RANGE (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 30,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 50,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tid_part",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 52 1`] = `
[
  " -- fails
DROP TABLE tid_part",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_part",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 57 1`] = `
[
  "CREATE VIEW tid_view_no_ctid AS SELECT a FROM tid_tab",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "tid_tab",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 39,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 39,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "tid_view_no_ctid",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 58 1`] = `
[
  " -- fails
DROP VIEW tid_view_no_ctid",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_view_no_ctid",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_VIEW",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 61 1`] = `
[
  "CREATE VIEW tid_view_with_ctid AS SELECT ctid, a FROM tid_tab",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 54,
                      "relname": "tid_tab",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 41,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 47,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 47,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "tid_view_with_ctid",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 64 1`] = `
[
  " -- ok
DROP VIEW tid_view_with_ctid",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_view_with_ctid",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_VIEW",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 68 1`] = `
[
  "CREATE VIEW tid_view_fake_ctid AS SELECT 1 AS ctid, 2 AS a",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 41,
                      "name": "ctid",
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 41,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 52,
                      "name": "a",
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 52,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "tid_view_fake_ctid",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 69 1`] = `
[
  " -- fails
DROP VIEW tid_view_fake_ctid",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_view_fake_ctid",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_VIEW",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tid.sql > line 72 1`] = `
[
  "DROP TABLE tid_tab CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tid_tab",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
